# skill-process-explain-agents

./: .gitignore  Dockerfile  README.md  client.py  deploy.sh  docker-compose.yml  env_example  pyproject.toml  server.py  start.sh  start_manage.sh
app/: __init__.py
app/skills/data-analysis/references/: analysis-methods.md
app/skills/research-synthesis/: SKILL.md
app/skills/research-synthesis/references/: synthesis-guide.md
backend/: client.py  env_example  pyproject.toml  server.py
backend/app/: agent.py  create_model.py  file_reader.py  instruction.md  narrator.py  narrator_rules.py  tools.py
backend/app/.adk/: session.db
backend/app/skills/arxiv-paper-search/: SKILL.md  _meta.json
backend/app/skills/arxiv-paper-search/scripts/: arxiv_search.py
backend/app/skills/bingsearch/: SKILL.md  _meta.json
backend/app/skills/bingsearch/scripts/: bing_search.py
backend/app/skills/data-analysis/: SKILL.md
backend/app/skills/medical-keyword-search/: SKILL.md  _meta.json
backend/app/skills/searxng/: SKILL.md  _meta.json
backend/app/skills/searxng/scripts/: search.py
backend/app/skills/searxng/tests/: test_search.py
docs/: STATUS_INDICATOR_IMPROVEMENT.md  file_tree.md  manage_files.md  zhihu-article.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.css  App.jsx  App.tsx  api.js  api.ts  index.css
manage_backend/: .gitignore  env_example  pyproject.toml  server.py
manage_backend/agent/: agent.py  create_model.py  file_tools.py  instruction.md  terminal_tools.py
manage_backend/agent/skills/optimize-agent/: SKILL.md
manage_backend/app/: __init__.py  agent_manager.py  config.py  log_analyzer.py  skill_manager.py
manage_frontend/: index.html  package-lock.json  package.json  vite.config.ts
manage_frontend/src/: App.tsx  api.ts  index.css
manage_frontend/src/components/: Layout.tsx
manage_frontend/src/pages/: LogsPage.tsx  OptimizePage.tsx
test/: Etrasimod.pptx  LongContextLLM.pptx  conftest.py  test_optimize_stream.py  test_ppt_qa.py  test_specific_question.py
