[project]
name = "skill-process-explain-agents"
version = "0.1.0"
description = "云顶新耀 医学研究智能体 — 医学文献检索、临床研究分析、药物对比研究"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "litellm>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "aiohttp>=3.0.0",
    "requests>=2.0.0",
    "python-pptx>=1.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
