[project]
name = "manage-backend"
version = "0.1.0"
description = "云顶新耀 智能体管理后端 — Agent 配置优化、Skill 管理、日志分析"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "litellm>=1.0.0",
    "aiohttp>=3.0.0",
    "watchdog>=3.0.0",
    "google-adk>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
